apps/overlays/it/patch/sample-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-app
  labels:
    app: it-sample-app
spec:
  selector:
    matchLabels:
      deployment: it-sample-app
  template:
    metadata:
      labels:
        deployment: it-sample-app
        app: it-sample-app
    spec:
      containers:
        - name: sample-app
          image: image-registry.openshift-image-registry.svc:5000/jiadchen-dev/sample-app:7ba6676a4d50f648d85e8610f196688b2dc641e9
