apps/overlays/it/patch/sample-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-app
  labels:
    app: it-sample-app
spec:
  selector:
    deployment: it-sample-app
